# truecivic

./: .env.example  .gitignore  Dockerfile  README.md  bower.json  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt
alembic/versions/: 10_committee_acronym_uniqueness.py
config-examples/: settings.py.example
config-examples/solr/: schema.xml
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: bill-summary-panel.tsx  chat-screen.tsx
frontend/lib/: ai.ts  op-api.ts  op-links.ts  op-types.ts  rag.test.ts  rag.ts  url-params.ts
frontend/styles/: tokens.css
parliament/: default_settings.py  jobs.py  offline_compress_settings.py  settings.py
parliament/accounts/: models.py
parliament/alerts/: models.py  utils.py  views.py
parliament/api/: urls.py  views.py
parliament/bills/: views.py
parliament/core/: models.py  utils.py  views.py
parliament/hansards/: models.py
parliament/imports/: hansard_downloader.py  http_retry.py  mps.py  parl_cmte.py  parl_document.py  parlvotes.py  publicationsearch_provider.py
parliament/orchestration/: __init__.py  apps.py  definitions.py  factory.py  models.py  runner.py  scheduler.py  watermarks.py
parliament/politicians/: tests.py  views.py
parliament/rag/: __init__.py  api_views.py  apps.py  ingest.py  models.py  views.py
parliament/search/: views.py
scripts/: setup_prefect_infra.py  setup_railway_services.py  validate_railway_services.py
src/db/: models.py
(+372 files in other folders)
