[project]
name = "truecivic"
version = "0.1.0"
description = "A website to present the goings-on of Canada's House of Commons"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django >=5.2,<5.3",
    "dj-database-url",
    "django-compressor",
    "django-extensions",
    "django-libsass",
    "django-recaptcha",
    "django-redis",
    "Pillow",
    "lxml",
    "lxml_html_clean",
    "cssselect",
    "Markdown",
    "pysolr",
    "requests",
    "psycopg",
    "python-dotenv",
    "webob",
    "oauth2client",
    "whitenoise",
    "confluent-kafka",
    "apscheduler",
    "qdrant-client>=1.11.0",
    "openai>=1.45.0",
]

[project.optional-dependencies]
production = [
    "redis<6",
    "hiredis<3",
    "gunicorn",
    "gevent", # only used for gunicorn workers
    "calmjs",
    "sentry-sdk",
]

